[metadata]
name = CasPyside6Widgets
version = 1
description = Some resuable widgets for Pyside6 for personal use.
long_description = file: README.md
long_description_content_type = text/markdown
author = Casual Snek
author_email = casualsnek@pm.me
url = https://github.com/causalsnek/CasPyside6Widgets
keywords = qt, pyside, pyside6, gui, wigets, qt-widgets
license = GPL-2.0 License

[options]
package_dir=
    =src
python_requires = >= 3.0
packages = find:
install_requires = file:requirements.txt

[options.entry_points]
[options.packages.find]
where=src
